<resources>
    <string name="hello">Hello World, LoadMoreListView!</string>
    <string name="app_name">SoGoods</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh…</string>
    <string name="aviary_meme_font">meme/Impact.ttf</string>
    <string name="feather_plugin_filter_undefined_name">Original</string>
    <string name="feather_illuminate">Illuminate</string>
    <string name="feather_effects">Effects</string>
    <string name="feather_tool">Tool</string>
    <string name="feather_auto_enhance_label">Auto</string>
    <string name="feather_edit_your_photo">Photo Editor</string>
    <string name="feather_error_saving_aviary_folder">Oops, there was an error trying to save the image to the Aviary folder. Do you want to try to save it to the default camera folder?</string>
    <string name="feather_new_effects">New Effects</string>
    <string name="feather_meme">Meme</string>
    <string name="feather_whiten">Whiten</string>
    <string name="feather_message_title">Featured Effects: Toy Camera</string>
    <string name="feather_attention">Attention</string>
    <string name="feather_effects_error_update_pack">Sorry, you must update the plugin to continue.</string>
    <string name="feather_effects_end_of_list">End of the list</string>
    <string name="feather_close">Close</string>
    <string name="feather_about_dialog_message">"Aviary is the world's leading photo editing platform. Developers: learn how to add it to your app in minutes."</string>
    <string name="feather_message_button_no">No, thanks.</string>
    <string name="feather_rectangle">Rectangle</string>
    <string name="feather_revert_dialog_title">Revert to original?</string>
    <string name="feather_keep_editing">Keep editing</string>
    <string name="feather_sticker_delete_message">Are you sure you want to remove this sticker?</string>
    <string name="feather_mirror">Mirror</string>
    <string name="feather_infoscreen_bottom_button">About this editor</string>
    <string name="feather_effects_error_update_editor">Sorry, you must update the Aviary editor to use this plugin.</string>
    <string name="feather_update">Update</string>
    <string name="feather_effects_error_update_editors">This app needs to be updated to work with your installed effect packs. Tap \"update\" to update it in Google Play.</string>
    <string name="feather_filter_pack_updated">A filter pack has been updated. Click OK to reload the packs list.</string>
    <string name="feather_saturation">Saturation</string>
    <string name="feather_version">Version</string>
    <string name="feather_revert_dialog_message">"You're about to lose all the changes you've made. Are you sure you want to revert to the original image?"</string>
    <string name="feather_share">Share</string>
    <string name="feather_colorsplash_smart">Smart Color</string>
    <string name="feather_draw">Draw</string>
    <string name="feather_error_download_image_message">There was an error downloading the image, please try again later.</string>
    <string name="feather_error_saving_image">Oops, there was an error while saving the image.</string>
    <string name="feather_effect_loading_message">Applying effects</string>
    <string name="feather_stickers_dialog_first_time">"Install Aviary's free pack of beautiful high resolution stickers to get started."</string>
    <string name="feather_hidef">Hi-Def</string>
    <string name="feather_message_button_yes">Sure!</string>
    <string name="feather_yes_leave">Leave editor</string>
    <string name="feather_enter_text_here">Enter text here</string>
    <string name="feather_feedback_dialog_message">Have a suggestion to improve this photo editor? Let us know.</string>
    <string name="feather_loading_image">Loading Image#8230;</string>
    <string name="feather_circle">Circle</string>
    <string name="feather_effects_beginning_of_list">Beginning of the list</string>
    <string name="feather_view_file">View Image</string>
    <string name="feather_contrast">Contrast</string>
    <string name="feather_plugin_error_download">Failed to copy the plugin, please try to reinstall it</string>
    <string name="feather_confirm">Confirm</string>
    <string name="feather_shapes">Shapes</string>
    <string name="feather_text">Text</string>
    <string name="feather_plugin_error_storage_not_available">Failed to copy the plugin inside the device storage</string>
    <string name="feather_effects_error_update_packs">One or more installed effect packs need to be updated. Tap \"update\" to update them all in Google Play. Alternatively, you can click any effect thumbnail marked with an update icon to update the pack it came from in Google Play.</string>
    <string name="feather_blemish">Blemish</string>
    <string name="feather_original">Original</string>
    <string name="feather_delete">Delete</string>
    <string name="feather_sticker_pack_updated_1">A sticker pack has been updated. Click OK to reload the packs list.</string>
    <string name="feather_sticker_pack_updated_2">A sticker pack has been updated. We need to reload the current panel.</string>
    <string name="feather_sticker_pack_updated_3">A sticker pack has been updated. We need to reload the current panel. Do you want to apply the current sticker?</string>
    <string name="feather_send_feedback">Send Feedback</string>
    <string name="feather_colorfix">Color Fix</string>
    <string name="feather_tool_colorsplash">Splash</string>
    <string name="feather_item_not_found">Item not found</string>
    <string name="feather_colorsplash_free">Free Color</string>
    <string name="feather_image_saved_in">Image saved in %1$s. Do you want to see the saved image?</string>
    <string name="feather_menu_reset">Reset</string>
    <string name="feather_custom">Custom</string>
    <string name="feather_infoscreen_text">Aviary is a free embeddable photo editor that developers can add to their app in just minutes.</string>
    <string name="feather_message_text">This beautiful new effects pack adds light leaks, cool colors, and visual distortions to your photos. Do you want to check it out?</string>
    <string name="feather_stickers">Stickers</string>
    <string name="feather_generic_error_title">Error</string>
    <string name="feather_activity_not_found">"Sorry, there's no application on your device to handle this action. Do you want to download it now from the market?"</string>
    <string name="feather_zoom_mode">Zoom Mode</string>
    <string name="feather_effects_error_loading_packs">Sorry, there was an error loading some of the effect packs.</string>
    <string name="feather_crash_toast_text">Oops! I crashed, but a report has been sent to my developer to help him fix the issue!</string>
    <string name="feather_square">Square</string>
    <string name="feather_back_enhance_label">Backlit</string>
    <string name="feather_edit_bottom_text">Edit Bottom Text</string>
    <string name="feather_adjust">Orientation</string>
    <string name="filter_name">Free</string>
    <string name="feather_tool_temperature">Warmth</string>
    <string name="feather_loading_title">Loading#8230;</string>
    <string name="feather_edit_top_text">Edit Top Text</string>
    <string name="feather_effects_error_update_multiple">You need to update this app and some of the installed effect packs. Tap \"update\" to update them all in Google Play. This app may not perform correctly unless everything is updated to the latest version</string>
    <string name="feather_feedback">Feedback</string>
    <string name="menu_premium">Store</string>
    <string name="feather_apply">Apply</string>
    <string name="feather_sharpen">Sharpness</string>
    <string name="feather_effects_unknown_errors">Unknown errors.</string>
    <string name="feather_borders_dialog_first_time">"Install Aviary's free pack of beautiful high resolution frames to get started."</string>
    <string name="border_name">Free</string>
    <string name="feather_download">Download</string>
    <string name="feather_enhance">Enhance</string>
    <string name="feather_save">Done</string>
    <string name="feather_effects_error_loading_pack">Sorry, there was an error loading the plugin.</string>
    <string name="feather_brightness">Brightness</string>
    <string name="feather_tool_tiltshift">Focus</string>
    <string name="confirm_quit_message">"Wait! You didn't save your work. Are you certain that you want to close this editor?"</string>
    <string name="feather_save_progress">Saving#8230;</string>
    <string name="feather_balance_enhance_label">Balance</string>
    <string name="feather_effects_unknown_error">Unknown error</string>
    <string name="feather_tool_leave_question">Are you sure you want to discard changes from this tool?</string>
    <string name="feather_colorsplash_eraser">Eraser</string>
    <string name="feather_rotate">Rotate</string>
    <string name="feather_plugin_error_corrupted">The plugin seems corrupted, please try to install it again</string>
    <string name="feather_tool_name">Aviary</string>
    <string name="feather_get_more">Get More</string>
    <string name="feather_borders">Frames</string>
    <string name="feather_try_again">Try Again</string>
    <string name="feather_flip">Flip</string>
    <string name="feather_sticker_name">Demo</string>
    <string name="feather_cancel">Cancel</string>
    <string name="feather_crop">Crop</string>
    <string name="feather_featured">Featured</string>
    <string name="feather_red_eye">Redeye</string>
    <string name="feather_remove">Remove</string>
    <string name="soGoods">So Goods</string>
    <string name="brand">Brand</string>
    <string name="shop">Shop</string>
    <string name="shops">Shops</string>
    <string name="brands">Brands</string>
    <string name="users">Users</string>
    <string name="product">Product</string>
    <string name="close">Close</string>
    <string name="noResultForSearch">No result matches your search terms.</string>
    <string name="noContent">No Content for this section at the moment.</string>
    <string name="noComment">Still not comments yet. Be the first one to give your opinion !</string>
    <string name="error">Error</string>
    <string name="demoTitle">Demo</string>
    <string name="email">Email</string>
    <string name="yourEmail">Your email address :</string>
    <string name="password">Password</string>
    <string name="signUp">Sign up</string>
    <string name="logIn">Log In</string>
    <string name="suggested">Suggested</string>
    <string name="popular">Popular</string>
    <string name="gallery">Gallery</string>
    <string name="selectBrand">Select a brand</string>
    <string name="photos">Pictures</string>
    <string name="so">SO</string>
    <string name="follower_s">Followers</string>
    <string name="following">Following</string>
    <string name="fan_s">Fans</string>
    <string name="likeTypeDream">Dream</string>
    <string name="likeTypeNext">Next purchase</string>
    <string name="likeTypeOwned">I’ve got it</string>
    <string name="likeTypeLike">I like</string>
    <string name="searchBrand">Search a brand</string>
    <string name="menu">Menu</string>
    <string name="noResult">No Results</string>
    <string name="cancel">Cancel</string>
    <string name="new_filter">New</string>
    <string name="placeholder_fans">Fans</string>
    <string name="placeholder_photos">Photos</string>
    <string name="placeholder_follows">Follows</string>
    <string name="placeholder_following">following</string>
    <string name="placeholder_likes">SO</string>
    <string name="access_shadow_image">Shadow decoration</string>
    <string name="access_profile_image">Image of member</string>
</resources>