<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:sogoods="http://schemas.android.com/apk/res/com.hitechno.sogoods"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <RelativeLayout android:layout_width="match_parent"
		android:layout_height="0dp" android:layout_weight="2">

		<ImageView android:id="@+id/profile_image"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:layout_gravity="fill" android:contentDescription="@string/access_profile_image" 
			android:src="@drawable/affinity"/>

		<com.hitechno.sogoods.views.FuturaTextView
			android:id="@+id/profile_username" android:layout_width="wrap_content"
			android:layout_height="wrap_content" sogoods:typeface="futura_std_medium"
		 android:layout_alignBottom="@id/profile_image" android:text="kkkkkkk" />
	</RelativeLayout>

	<ImageView android:layout_width="match_parent"
		android:layout_height="100dp"
		android:background="@drawable/pager_drop_shadow" android:contentDescription="@string/access_shadow_image" android:src="@drawable/news_picture"/>

	<RadioGroup android:id="@+id/profile_buttons"
		android:layout_width="match_parent" android:layout_height="0dp"
		android:orientation="horizontal" android:layout_weight="1">

		<com.hitechno.sogoods.views.FuturaToggleButton
			android:id="@+id/profile_follows_button" android:layout_width="0dp"
			android:layout_height="wrap_content" android:layout_weight="2"
			android:onClick="onProfileFilterClicked" android:background="@drawable/brand_radio_button"
			 android:textOff="@string/placeholder_follows"
			android:textOn="@string/placeholder_follows" android:text="@string/placeholder_follows"
			sogoods:typeface="futura_std_medium" />
		<com.hitechno.sogoods.views.FuturaToggleButton
			android:id="@+id/profile_following_button" android:layout_width="0dp"
			android:layout_height="wrap_content" android:layout_weight="3"
			android:onClick="onProfileFilterClicked" android:background="@drawable/brand_radio_button"
			 android:textOff="@string/placeholder_following"
			android:textOn="@string/placeholder_following" android:text="@string/placeholder_following"
			sogoods:typeface="futura_std_medium" />
		<com.hitechno.sogoods.views.FuturaToggleButton
			android:id="@+id/profile_brands_button" android:layout_width="0dp"
			android:layout_height="wrap_content" android:layout_weight="2"
			android:onClick="onProfileFilterClicked" android:background="@drawable/brand_radio_button"
			 android:textOff="@string/placeholder_fans"
			android:textOn="@string/placeholder_fans" android:text="@string/placeholder_fans"
			sogoods:typeface="futura_std_medium" />
		<com.hitechno.sogoods.views.FuturaToggleButton
			android:id="@+id/profile_products_button" android:layout_width="0dp"
			android:layout_height="wrap_content" android:layout_weight="2"
			android:onClick="onProfileFilterClicked" android:background="@drawable/brand_radio_button"
			 android:textOff="@string/placeholder_likes"
			android:textOn="@string/placeholder_likes" android:text="@string/placeholder_likes"
			sogoods:typeface="futura_std_medium" />
		<com.hitechno.sogoods.views.FuturaToggleButton
			android:id="@+id/profile_photos_button" android:layout_width="0dp"
			android:layout_height="wrap_content" android:layout_weight="2"
			android:onClick="onProfileFilterClicked" android:background="@drawable/brand_radio_button"
			 android:textOff="@string/placeholder_photos"
			android:textOn="@string/placeholder_photos" android:text="@string/placeholder_photos"
			sogoods:typeface="futura_std_medium"/>
	</RadioGroup>

</LinearLayout>