<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="bottom" android:orientation="vertical" android:background="@color/ahalf__black_transparent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:sogoods="http://schemas.android.com/apk/res/com.hitechno.sogoods">
    <com.hitechno.sogoods.views.FuturaTextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/like_title" android:background="@color/black_transparent30" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" sogoods:typeface="futura_std_book" />
    <RadioGroup android:id="@+id/like_choices" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.hitechno.sogoods.views.FuturaToggleButton android:textSize="18.0sp" android:textColor="#ffd5baa5" android:layout_gravity="center" android:id="@+id/like_dream" android:background="@drawable/hover_like" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textOn="@string/likeTypeDream" android:textOff="@string/likeTypeDream" android:text="@string/likeTypeDream" android:onClick="onProductLikeChoiceClicked" sogoods:typeface="futura_std_light" />
        <com.hitechno.sogoods.views.FuturaToggleButton android:textSize="18.0sp" android:textColor="#ffd5baa5" android:layout_gravity="center" android:id="@+id/like_ilike" android:background="@drawable/hover_like" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:textOn="@string/likeTypeLike" android:textOff="@string/likeTypeLike" android:text="@string/likeTypeLike" android:onClick="onProductLikeChoiceClicked" sogoods:typeface="futura_std_light" />
        <com.hitechno.sogoods.views.FuturaToggleButton android:textSize="18.0sp" android:textColor="#ffd5baa5" android:layout_gravity="center" android:id="@+id/like_nextpurchase" android:background="@drawable/hover_like" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:textOn="@string/likeTypeNext" android:textOff="@string/likeTypeNext" android:text="@string/likeTypeNext" android:onClick="onProductLikeChoiceClicked" sogoods:typeface="futura_std_light" />
        <com.hitechno.sogoods.views.FuturaToggleButton android:textSize="18.0sp" android:textColor="#ffd5baa5" android:layout_gravity="center" android:id="@+id/like_have" android:background="@drawable/hover_like" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:textOn="@string/likeTypeOwned" android:textOff="@string/likeTypeOwned" android:text="@string/likeTypeOwned" android:onClick="onProductLikeChoiceClicked" sogoods:typeface="futura_std_light" />
        <com.hitechno.sogoods.views.FuturaToggleButton android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ffd5baa5" android:layout_gravity="center" android:id="@+id/like_cancel" android:background="@drawable/hover_like" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:textOn="@string/cancel" android:textOff="@string/cancel" android:text="@string/cancel" android:onClick="onProductLikeChoiceClicked" sogoods:typeface="futura_std_medium" />
    </RadioGroup>
</LinearLayout>
