<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:sogoods="http://schemas.android.com/apk/res/com.hitechno.sogoods">
    <RelativeLayout android:id="@+id/headerDiary" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <com.hitechno.sogoods.views.FuturaTextView android:textSize="18.0sp" android:textColor="@color/white" android:id="@+id/profile_header_menu_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/cancel" android:layout_alignParentLeft="true" android:layout_centerVertical="true" sogoods:typeface="futura_std_light" />
        <com.hitechno.sogoods.views.FuturaTextView android:textSize="15.0sp" android:textColor="@color/white" android:id="@+id/lbNameHeader" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/selectBrand" android:layout_centerInParent="true" sogoods:typeface="futura_std_medium" />
    </RelativeLayout>
    <RelativeLayout android:background="@color/sogoods_light_brow_color" android:layout_width="fill_parent" android:layout_height="60.0dip">
        <EditText android:id="@+id/editSearchbrand" android:background="@drawable/background_search" android:paddingLeft="40.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/searchBrand" android:singleLine="true" android:layout_centerInParent="true" />
        <ImageView android:id="@+id/imageViewSearch" android:layout_width="15.0dip" android:layout_height="15.0dip" android:layout_marginLeft="10.0dip" android:src="@drawable/search" android:layout_alignLeft="@+id/editSearchbrand" android:layout_centerVertical="true" android:contentDescription="@string/app_name" />
        <ImageView android:id="@+id/imageViewCut" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/bouton_quitter2x" android:layout_alignRight="@+id/editSearchbrand" android:layout_centerVertical="true" android:contentDescription="@string/app_name" />
    </RelativeLayout>
    <ImageView android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:contentDescription="@string/app_name" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ProgressBar android:layout_gravity="center" android:id="@+id/pbLoading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" android:layout_centerHorizontal="true" />
        <TextView android:textColor="@color/brow_color" android:layout_gravity="center" android:id="@+id/txtNoResult" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/noResult" />
        <ListView android:id="@+id/lstViewBrand" android:layout_width="fill_parent" android:layout_height="fill_parent" android:divider="@color/sogoods_dark_brow_color" android:dividerHeight="1.0dip" />
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/sideIndex" android:background="@drawable/side_index_background" android:visibility="visible" android:layout_width="40.0dip" android:layout_height="fill_parent" android:layout_marginTop="3.0dip" android:layout_marginBottom="3.0dip" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>
